Analizador_Semantico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> INICIO ENTRADA PROCESOS FIN
Rule 2     INICIO -> llaveApertura
Rule 3     ENTRADA -> INPUT dosPuntos LISTA_ID
Rule 4     INPUT -> entradas
Rule 5     LISTA_ID -> ID_NUM RESTO_LISTA
Rule 6     ID_NUM -> DIGITO RESTO_ID_NUM
Rule 7     RESTO_ID_NUM -> DIGITO RESTO_ID_NUM
Rule 8     RESTO_ID_NUM -> vacio
Rule 9     RESTO_LISTA -> coma RESTOZ
Rule 10    RESTOZ -> ID_NUM RESTO_LISTA
Rule 11    RESTOZ -> ETIQUETA coma PROPIEDAD
Rule 12    PROCESOS -> P dosPuntos EXPRESION
Rule 13    P -> procesos
Rule 14    ID_TEXT -> LETRA RESTO_ID_TEXT
Rule 15    RESTO_ID_TEXT -> LETRA RESTO_ID_TEXT
Rule 16    RESTO_ID_TEXT -> DIGITO RESTO_ID_TEXT
Rule 17    RESTO_ID_TEXT -> vacio
Rule 18    EXPRESION -> ID_TEXT asignacion RESTOX
Rule 19    EXPRESION -> FUNCION_INTERNA_4 parIzq ID_TEXT coma ID_TEXT coma ID_TEXT parDer
Rule 20    RESTOX -> FUNCION_INTERNA_1 parIzq ID_NUM coma ID_NUM coma ID_NUM parDer EXPRESION
Rule 21    RESTOX -> FUNCION_INTERNA_2 parIzq ETIQUETA parDer EXPRESION
Rule 22    RESTOX -> FUNCION_INTERNA_3 parIzq PROPIEDAD parDer EXPRESION
Rule 23    FUNCION_INTERNA_1 -> formato_hexadecimal
Rule 24    FUNCION_INTERNA_2 -> interpretar_etiqueta
Rule 25    FUNCION_INTERNA_3 -> interpretar_propiedad
Rule 26    FUNCION_INTERNA_4 -> generar_CSS
Rule 27    PROPIEDAD -> cssTags
Rule 28    ETIQUETA -> htmlTags
Rule 29    LETRA -> let
Rule 30    DIGITO -> num
Rule 31    FIN -> llaveCierre
Rule 32    vacio -> <empty>

Terminals, with rules where they appear

asignacion           : 18
coma                 : 9 11 19 19 20 20
cssTags              : 27
dosPuntos            : 3 12
entradas             : 4
error                : 
formato_hexadecimal  : 23
generar_CSS          : 26
htmlTags             : 28
interpretar_etiqueta : 24
interpretar_propiedad : 25
let                  : 29
llaveApertura        : 2
llaveCierre          : 31
num                  : 30
parDer               : 19 20 21 22
parIzq               : 19 20 21 22
procesos             : 13

Nonterminals, with rules where they appear

DIGITO               : 6 7 16
ENTRADA              : 1
ETIQUETA             : 11 21
EXPRESION            : 12 20 21 22
FIN                  : 1
FUNCION_INTERNA_1    : 20
FUNCION_INTERNA_2    : 21
FUNCION_INTERNA_3    : 22
FUNCION_INTERNA_4    : 19
ID_NUM               : 5 10 20 20 20
ID_TEXT              : 18 19 19 19
INICIO               : 1
INPUT                : 3
LETRA                : 14 15
LISTA_ID             : 3
P                    : 12
PROCESOS             : 1
PROPIEDAD            : 11 22
RESTOX               : 18
RESTOZ               : 9
RESTO_ID_NUM         : 6 7
RESTO_ID_TEXT        : 14 15 16
RESTO_LISTA          : 5 10
S                    : 0
vacio                : 8 17

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . INICIO ENTRADA PROCESOS FIN
    (2) INICIO -> . llaveApertura

    llaveApertura   shift and go to state 3

    S                              shift and go to state 1
    INICIO                         shift and go to state 2

state 1

    (0) S' -> S .



state 2

    (1) S -> INICIO . ENTRADA PROCESOS FIN
    (3) ENTRADA -> . INPUT dosPuntos LISTA_ID
    (4) INPUT -> . entradas

    entradas        shift and go to state 6

    ENTRADA                        shift and go to state 4
    INPUT                          shift and go to state 5

state 3

    (2) INICIO -> llaveApertura .

    entradas        reduce using rule 2 (INICIO -> llaveApertura .)


state 4

    (1) S -> INICIO ENTRADA . PROCESOS FIN
    (12) PROCESOS -> . P dosPuntos EXPRESION
    (13) P -> . procesos

    procesos        shift and go to state 9

    PROCESOS                       shift and go to state 7
    P                              shift and go to state 8

state 5

    (3) ENTRADA -> INPUT . dosPuntos LISTA_ID

    dosPuntos       shift and go to state 10


state 6

    (4) INPUT -> entradas .

    dosPuntos       reduce using rule 4 (INPUT -> entradas .)


state 7

    (1) S -> INICIO ENTRADA PROCESOS . FIN
    (31) FIN -> . llaveCierre

    llaveCierre     shift and go to state 12

    FIN                            shift and go to state 11

state 8

    (12) PROCESOS -> P . dosPuntos EXPRESION

    dosPuntos       shift and go to state 13


state 9

    (13) P -> procesos .

    dosPuntos       reduce using rule 13 (P -> procesos .)


state 10

    (3) ENTRADA -> INPUT dosPuntos . LISTA_ID
    (5) LISTA_ID -> . ID_NUM RESTO_LISTA
    (6) ID_NUM -> . DIGITO RESTO_ID_NUM
    (30) DIGITO -> . num

    num             shift and go to state 17

    LISTA_ID                       shift and go to state 14
    ID_NUM                         shift and go to state 15
    DIGITO                         shift and go to state 16

state 11

    (1) S -> INICIO ENTRADA PROCESOS FIN .

    $end            reduce using rule 1 (S -> INICIO ENTRADA PROCESOS FIN .)


state 12

    (31) FIN -> llaveCierre .

    $end            reduce using rule 31 (FIN -> llaveCierre .)


state 13

    (12) PROCESOS -> P dosPuntos . EXPRESION
    (18) EXPRESION -> . ID_TEXT asignacion RESTOX
    (19) EXPRESION -> . FUNCION_INTERNA_4 parIzq ID_TEXT coma ID_TEXT coma ID_TEXT parDer
    (14) ID_TEXT -> . LETRA RESTO_ID_TEXT
    (26) FUNCION_INTERNA_4 -> . generar_CSS
    (29) LETRA -> . let

    generar_CSS     shift and go to state 22
    let             shift and go to state 23

    EXPRESION                      shift and go to state 18
    ID_TEXT                        shift and go to state 19
    FUNCION_INTERNA_4              shift and go to state 20
    LETRA                          shift and go to state 21

state 14

    (3) ENTRADA -> INPUT dosPuntos LISTA_ID .

    procesos        reduce using rule 3 (ENTRADA -> INPUT dosPuntos LISTA_ID .)


state 15

    (5) LISTA_ID -> ID_NUM . RESTO_LISTA
    (9) RESTO_LISTA -> . coma RESTOZ

    coma            shift and go to state 25

    RESTO_LISTA                    shift and go to state 24

state 16

    (6) ID_NUM -> DIGITO . RESTO_ID_NUM
    (7) RESTO_ID_NUM -> . DIGITO RESTO_ID_NUM
    (8) RESTO_ID_NUM -> . vacio
    (30) DIGITO -> . num
    (32) vacio -> .

    num             shift and go to state 17
    coma            reduce using rule 32 (vacio -> .)
    parDer          reduce using rule 32 (vacio -> .)

    DIGITO                         shift and go to state 26
    RESTO_ID_NUM                   shift and go to state 27
    vacio                          shift and go to state 28

state 17

    (30) DIGITO -> num .

    num             reduce using rule 30 (DIGITO -> num .)
    coma            reduce using rule 30 (DIGITO -> num .)
    parDer          reduce using rule 30 (DIGITO -> num .)
    let             reduce using rule 30 (DIGITO -> num .)
    asignacion      reduce using rule 30 (DIGITO -> num .)


state 18

    (12) PROCESOS -> P dosPuntos EXPRESION .

    llaveCierre     reduce using rule 12 (PROCESOS -> P dosPuntos EXPRESION .)


state 19

    (18) EXPRESION -> ID_TEXT . asignacion RESTOX

    asignacion      shift and go to state 29


state 20

    (19) EXPRESION -> FUNCION_INTERNA_4 . parIzq ID_TEXT coma ID_TEXT coma ID_TEXT parDer

    parIzq          shift and go to state 30


state 21

    (14) ID_TEXT -> LETRA . RESTO_ID_TEXT
    (15) RESTO_ID_TEXT -> . LETRA RESTO_ID_TEXT
    (16) RESTO_ID_TEXT -> . DIGITO RESTO_ID_TEXT
    (17) RESTO_ID_TEXT -> . vacio
    (29) LETRA -> . let
    (30) DIGITO -> . num
    (32) vacio -> .

    let             shift and go to state 23
    num             shift and go to state 17
    asignacion      reduce using rule 32 (vacio -> .)
    coma            reduce using rule 32 (vacio -> .)
    parDer          reduce using rule 32 (vacio -> .)

    LETRA                          shift and go to state 31
    RESTO_ID_TEXT                  shift and go to state 32
    DIGITO                         shift and go to state 33
    vacio                          shift and go to state 34

state 22

    (26) FUNCION_INTERNA_4 -> generar_CSS .

    parIzq          reduce using rule 26 (FUNCION_INTERNA_4 -> generar_CSS .)


state 23

    (29) LETRA -> let .

    let             reduce using rule 29 (LETRA -> let .)
    num             reduce using rule 29 (LETRA -> let .)
    asignacion      reduce using rule 29 (LETRA -> let .)
    coma            reduce using rule 29 (LETRA -> let .)
    parDer          reduce using rule 29 (LETRA -> let .)


state 24

    (5) LISTA_ID -> ID_NUM RESTO_LISTA .

    procesos        reduce using rule 5 (LISTA_ID -> ID_NUM RESTO_LISTA .)


state 25

    (9) RESTO_LISTA -> coma . RESTOZ
    (10) RESTOZ -> . ID_NUM RESTO_LISTA
    (11) RESTOZ -> . ETIQUETA coma PROPIEDAD
    (6) ID_NUM -> . DIGITO RESTO_ID_NUM
    (28) ETIQUETA -> . htmlTags
    (30) DIGITO -> . num

    htmlTags        shift and go to state 38
    num             shift and go to state 17

    RESTOZ                         shift and go to state 35
    ID_NUM                         shift and go to state 36
    ETIQUETA                       shift and go to state 37
    DIGITO                         shift and go to state 16

state 26

    (7) RESTO_ID_NUM -> DIGITO . RESTO_ID_NUM
    (7) RESTO_ID_NUM -> . DIGITO RESTO_ID_NUM
    (8) RESTO_ID_NUM -> . vacio
    (30) DIGITO -> . num
    (32) vacio -> .

    num             shift and go to state 17
    coma            reduce using rule 32 (vacio -> .)
    parDer          reduce using rule 32 (vacio -> .)

    DIGITO                         shift and go to state 26
    RESTO_ID_NUM                   shift and go to state 39
    vacio                          shift and go to state 28

state 27

    (6) ID_NUM -> DIGITO RESTO_ID_NUM .

    coma            reduce using rule 6 (ID_NUM -> DIGITO RESTO_ID_NUM .)
    parDer          reduce using rule 6 (ID_NUM -> DIGITO RESTO_ID_NUM .)


state 28

    (8) RESTO_ID_NUM -> vacio .

    coma            reduce using rule 8 (RESTO_ID_NUM -> vacio .)
    parDer          reduce using rule 8 (RESTO_ID_NUM -> vacio .)


state 29

    (18) EXPRESION -> ID_TEXT asignacion . RESTOX
    (20) RESTOX -> . FUNCION_INTERNA_1 parIzq ID_NUM coma ID_NUM coma ID_NUM parDer EXPRESION
    (21) RESTOX -> . FUNCION_INTERNA_2 parIzq ETIQUETA parDer EXPRESION
    (22) RESTOX -> . FUNCION_INTERNA_3 parIzq PROPIEDAD parDer EXPRESION
    (23) FUNCION_INTERNA_1 -> . formato_hexadecimal
    (24) FUNCION_INTERNA_2 -> . interpretar_etiqueta
    (25) FUNCION_INTERNA_3 -> . interpretar_propiedad

    formato_hexadecimal shift and go to state 44
    interpretar_etiqueta shift and go to state 45
    interpretar_propiedad shift and go to state 46

    RESTOX                         shift and go to state 40
    FUNCION_INTERNA_1              shift and go to state 41
    FUNCION_INTERNA_2              shift and go to state 42
    FUNCION_INTERNA_3              shift and go to state 43

state 30

    (19) EXPRESION -> FUNCION_INTERNA_4 parIzq . ID_TEXT coma ID_TEXT coma ID_TEXT parDer
    (14) ID_TEXT -> . LETRA RESTO_ID_TEXT
    (29) LETRA -> . let

    let             shift and go to state 23

    ID_TEXT                        shift and go to state 47
    LETRA                          shift and go to state 21

state 31

    (15) RESTO_ID_TEXT -> LETRA . RESTO_ID_TEXT
    (15) RESTO_ID_TEXT -> . LETRA RESTO_ID_TEXT
    (16) RESTO_ID_TEXT -> . DIGITO RESTO_ID_TEXT
    (17) RESTO_ID_TEXT -> . vacio
    (29) LETRA -> . let
    (30) DIGITO -> . num
    (32) vacio -> .

    let             shift and go to state 23
    num             shift and go to state 17
    asignacion      reduce using rule 32 (vacio -> .)
    coma            reduce using rule 32 (vacio -> .)
    parDer          reduce using rule 32 (vacio -> .)

    LETRA                          shift and go to state 31
    RESTO_ID_TEXT                  shift and go to state 48
    DIGITO                         shift and go to state 33
    vacio                          shift and go to state 34

state 32

    (14) ID_TEXT -> LETRA RESTO_ID_TEXT .

    asignacion      reduce using rule 14 (ID_TEXT -> LETRA RESTO_ID_TEXT .)
    coma            reduce using rule 14 (ID_TEXT -> LETRA RESTO_ID_TEXT .)
    parDer          reduce using rule 14 (ID_TEXT -> LETRA RESTO_ID_TEXT .)


state 33

    (16) RESTO_ID_TEXT -> DIGITO . RESTO_ID_TEXT
    (15) RESTO_ID_TEXT -> . LETRA RESTO_ID_TEXT
    (16) RESTO_ID_TEXT -> . DIGITO RESTO_ID_TEXT
    (17) RESTO_ID_TEXT -> . vacio
    (29) LETRA -> . let
    (30) DIGITO -> . num
    (32) vacio -> .

    let             shift and go to state 23
    num             shift and go to state 17
    asignacion      reduce using rule 32 (vacio -> .)
    coma            reduce using rule 32 (vacio -> .)
    parDer          reduce using rule 32 (vacio -> .)

    DIGITO                         shift and go to state 33
    RESTO_ID_TEXT                  shift and go to state 49
    LETRA                          shift and go to state 31
    vacio                          shift and go to state 34

state 34

    (17) RESTO_ID_TEXT -> vacio .

    asignacion      reduce using rule 17 (RESTO_ID_TEXT -> vacio .)
    coma            reduce using rule 17 (RESTO_ID_TEXT -> vacio .)
    parDer          reduce using rule 17 (RESTO_ID_TEXT -> vacio .)


state 35

    (9) RESTO_LISTA -> coma RESTOZ .

    procesos        reduce using rule 9 (RESTO_LISTA -> coma RESTOZ .)


state 36

    (10) RESTOZ -> ID_NUM . RESTO_LISTA
    (9) RESTO_LISTA -> . coma RESTOZ

    coma            shift and go to state 25

    RESTO_LISTA                    shift and go to state 50

state 37

    (11) RESTOZ -> ETIQUETA . coma PROPIEDAD

    coma            shift and go to state 51


state 38

    (28) ETIQUETA -> htmlTags .

    coma            reduce using rule 28 (ETIQUETA -> htmlTags .)
    parDer          reduce using rule 28 (ETIQUETA -> htmlTags .)


state 39

    (7) RESTO_ID_NUM -> DIGITO RESTO_ID_NUM .

    coma            reduce using rule 7 (RESTO_ID_NUM -> DIGITO RESTO_ID_NUM .)
    parDer          reduce using rule 7 (RESTO_ID_NUM -> DIGITO RESTO_ID_NUM .)


state 40

    (18) EXPRESION -> ID_TEXT asignacion RESTOX .

    llaveCierre     reduce using rule 18 (EXPRESION -> ID_TEXT asignacion RESTOX .)


state 41

    (20) RESTOX -> FUNCION_INTERNA_1 . parIzq ID_NUM coma ID_NUM coma ID_NUM parDer EXPRESION

    parIzq          shift and go to state 52


state 42

    (21) RESTOX -> FUNCION_INTERNA_2 . parIzq ETIQUETA parDer EXPRESION

    parIzq          shift and go to state 53


state 43

    (22) RESTOX -> FUNCION_INTERNA_3 . parIzq PROPIEDAD parDer EXPRESION

    parIzq          shift and go to state 54


state 44

    (23) FUNCION_INTERNA_1 -> formato_hexadecimal .

    parIzq          reduce using rule 23 (FUNCION_INTERNA_1 -> formato_hexadecimal .)


state 45

    (24) FUNCION_INTERNA_2 -> interpretar_etiqueta .

    parIzq          reduce using rule 24 (FUNCION_INTERNA_2 -> interpretar_etiqueta .)


state 46

    (25) FUNCION_INTERNA_3 -> interpretar_propiedad .

    parIzq          reduce using rule 25 (FUNCION_INTERNA_3 -> interpretar_propiedad .)


state 47

    (19) EXPRESION -> FUNCION_INTERNA_4 parIzq ID_TEXT . coma ID_TEXT coma ID_TEXT parDer

    coma            shift and go to state 55


state 48

    (15) RESTO_ID_TEXT -> LETRA RESTO_ID_TEXT .

    asignacion      reduce using rule 15 (RESTO_ID_TEXT -> LETRA RESTO_ID_TEXT .)
    coma            reduce using rule 15 (RESTO_ID_TEXT -> LETRA RESTO_ID_TEXT .)
    parDer          reduce using rule 15 (RESTO_ID_TEXT -> LETRA RESTO_ID_TEXT .)


state 49

    (16) RESTO_ID_TEXT -> DIGITO RESTO_ID_TEXT .

    asignacion      reduce using rule 16 (RESTO_ID_TEXT -> DIGITO RESTO_ID_TEXT .)
    coma            reduce using rule 16 (RESTO_ID_TEXT -> DIGITO RESTO_ID_TEXT .)
    parDer          reduce using rule 16 (RESTO_ID_TEXT -> DIGITO RESTO_ID_TEXT .)


state 50

    (10) RESTOZ -> ID_NUM RESTO_LISTA .

    procesos        reduce using rule 10 (RESTOZ -> ID_NUM RESTO_LISTA .)


state 51

    (11) RESTOZ -> ETIQUETA coma . PROPIEDAD
    (27) PROPIEDAD -> . cssTags

    cssTags         shift and go to state 57

    PROPIEDAD                      shift and go to state 56

state 52

    (20) RESTOX -> FUNCION_INTERNA_1 parIzq . ID_NUM coma ID_NUM coma ID_NUM parDer EXPRESION
    (6) ID_NUM -> . DIGITO RESTO_ID_NUM
    (30) DIGITO -> . num

    num             shift and go to state 17

    ID_NUM                         shift and go to state 58
    DIGITO                         shift and go to state 16

state 53

    (21) RESTOX -> FUNCION_INTERNA_2 parIzq . ETIQUETA parDer EXPRESION
    (28) ETIQUETA -> . htmlTags

    htmlTags        shift and go to state 38

    ETIQUETA                       shift and go to state 59

state 54

    (22) RESTOX -> FUNCION_INTERNA_3 parIzq . PROPIEDAD parDer EXPRESION
    (27) PROPIEDAD -> . cssTags

    cssTags         shift and go to state 57

    PROPIEDAD                      shift and go to state 60

state 55

    (19) EXPRESION -> FUNCION_INTERNA_4 parIzq ID_TEXT coma . ID_TEXT coma ID_TEXT parDer
    (14) ID_TEXT -> . LETRA RESTO_ID_TEXT
    (29) LETRA -> . let

    let             shift and go to state 23

    ID_TEXT                        shift and go to state 61
    LETRA                          shift and go to state 21

state 56

    (11) RESTOZ -> ETIQUETA coma PROPIEDAD .

    procesos        reduce using rule 11 (RESTOZ -> ETIQUETA coma PROPIEDAD .)


state 57

    (27) PROPIEDAD -> cssTags .

    procesos        reduce using rule 27 (PROPIEDAD -> cssTags .)
    parDer          reduce using rule 27 (PROPIEDAD -> cssTags .)


state 58

    (20) RESTOX -> FUNCION_INTERNA_1 parIzq ID_NUM . coma ID_NUM coma ID_NUM parDer EXPRESION

    coma            shift and go to state 62


state 59

    (21) RESTOX -> FUNCION_INTERNA_2 parIzq ETIQUETA . parDer EXPRESION

    parDer          shift and go to state 63


state 60

    (22) RESTOX -> FUNCION_INTERNA_3 parIzq PROPIEDAD . parDer EXPRESION

    parDer          shift and go to state 64


state 61

    (19) EXPRESION -> FUNCION_INTERNA_4 parIzq ID_TEXT coma ID_TEXT . coma ID_TEXT parDer

    coma            shift and go to state 65


state 62

    (20) RESTOX -> FUNCION_INTERNA_1 parIzq ID_NUM coma . ID_NUM coma ID_NUM parDer EXPRESION
    (6) ID_NUM -> . DIGITO RESTO_ID_NUM
    (30) DIGITO -> . num

    num             shift and go to state 17

    ID_NUM                         shift and go to state 66
    DIGITO                         shift and go to state 16

state 63

    (21) RESTOX -> FUNCION_INTERNA_2 parIzq ETIQUETA parDer . EXPRESION
    (18) EXPRESION -> . ID_TEXT asignacion RESTOX
    (19) EXPRESION -> . FUNCION_INTERNA_4 parIzq ID_TEXT coma ID_TEXT coma ID_TEXT parDer
    (14) ID_TEXT -> . LETRA RESTO_ID_TEXT
    (26) FUNCION_INTERNA_4 -> . generar_CSS
    (29) LETRA -> . let

    generar_CSS     shift and go to state 22
    let             shift and go to state 23

    EXPRESION                      shift and go to state 67
    ID_TEXT                        shift and go to state 19
    FUNCION_INTERNA_4              shift and go to state 20
    LETRA                          shift and go to state 21

state 64

    (22) RESTOX -> FUNCION_INTERNA_3 parIzq PROPIEDAD parDer . EXPRESION
    (18) EXPRESION -> . ID_TEXT asignacion RESTOX
    (19) EXPRESION -> . FUNCION_INTERNA_4 parIzq ID_TEXT coma ID_TEXT coma ID_TEXT parDer
    (14) ID_TEXT -> . LETRA RESTO_ID_TEXT
    (26) FUNCION_INTERNA_4 -> . generar_CSS
    (29) LETRA -> . let

    generar_CSS     shift and go to state 22
    let             shift and go to state 23

    EXPRESION                      shift and go to state 68
    ID_TEXT                        shift and go to state 19
    FUNCION_INTERNA_4              shift and go to state 20
    LETRA                          shift and go to state 21

state 65

    (19) EXPRESION -> FUNCION_INTERNA_4 parIzq ID_TEXT coma ID_TEXT coma . ID_TEXT parDer
    (14) ID_TEXT -> . LETRA RESTO_ID_TEXT
    (29) LETRA -> . let

    let             shift and go to state 23

    ID_TEXT                        shift and go to state 69
    LETRA                          shift and go to state 21

state 66

    (20) RESTOX -> FUNCION_INTERNA_1 parIzq ID_NUM coma ID_NUM . coma ID_NUM parDer EXPRESION

    coma            shift and go to state 70


state 67

    (21) RESTOX -> FUNCION_INTERNA_2 parIzq ETIQUETA parDer EXPRESION .

    llaveCierre     reduce using rule 21 (RESTOX -> FUNCION_INTERNA_2 parIzq ETIQUETA parDer EXPRESION .)


state 68

    (22) RESTOX -> FUNCION_INTERNA_3 parIzq PROPIEDAD parDer EXPRESION .

    llaveCierre     reduce using rule 22 (RESTOX -> FUNCION_INTERNA_3 parIzq PROPIEDAD parDer EXPRESION .)


state 69

    (19) EXPRESION -> FUNCION_INTERNA_4 parIzq ID_TEXT coma ID_TEXT coma ID_TEXT . parDer

    parDer          shift and go to state 71


state 70

    (20) RESTOX -> FUNCION_INTERNA_1 parIzq ID_NUM coma ID_NUM coma . ID_NUM parDer EXPRESION
    (6) ID_NUM -> . DIGITO RESTO_ID_NUM
    (30) DIGITO -> . num

    num             shift and go to state 17

    ID_NUM                         shift and go to state 72
    DIGITO                         shift and go to state 16

state 71

    (19) EXPRESION -> FUNCION_INTERNA_4 parIzq ID_TEXT coma ID_TEXT coma ID_TEXT parDer .

    llaveCierre     reduce using rule 19 (EXPRESION -> FUNCION_INTERNA_4 parIzq ID_TEXT coma ID_TEXT coma ID_TEXT parDer .)


state 72

    (20) RESTOX -> FUNCION_INTERNA_1 parIzq ID_NUM coma ID_NUM coma ID_NUM . parDer EXPRESION

    parDer          shift and go to state 73


state 73

    (20) RESTOX -> FUNCION_INTERNA_1 parIzq ID_NUM coma ID_NUM coma ID_NUM parDer . EXPRESION
    (18) EXPRESION -> . ID_TEXT asignacion RESTOX
    (19) EXPRESION -> . FUNCION_INTERNA_4 parIzq ID_TEXT coma ID_TEXT coma ID_TEXT parDer
    (14) ID_TEXT -> . LETRA RESTO_ID_TEXT
    (26) FUNCION_INTERNA_4 -> . generar_CSS
    (29) LETRA -> . let

    generar_CSS     shift and go to state 22
    let             shift and go to state 23

    EXPRESION                      shift and go to state 74
    ID_TEXT                        shift and go to state 19
    FUNCION_INTERNA_4              shift and go to state 20
    LETRA                          shift and go to state 21

state 74

    (20) RESTOX -> FUNCION_INTERNA_1 parIzq ID_NUM coma ID_NUM coma ID_NUM parDer EXPRESION .

    llaveCierre     reduce using rule 20 (RESTOX -> FUNCION_INTERNA_1 parIzq ID_NUM coma ID_NUM coma ID_NUM parDer EXPRESION .)

